# furniture_site

./: README.md  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  models.py  signals.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_cart_cartitem.py
main/templates/main/: about.html  base.html  cart.html  category_list.html  contacts.html  design_projects.html  furniture_detail.html  furniture_list.html  index.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile.html  register.html
