[project]
name = "furniture-store"
version = "0.1.0"
description = ""
authors = [
    {name = "origin",email = "yura28049119@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django = "^6.0"
dotenv = "^0.9.9"
psycopg2 = "^2.9.11"
pillow = "^12.0.0"


[tool.poetry.group.lint.dependencies]
black = "^25.12.0"
mypy = "^1.19.1"
isort = "^7.0.0"
flake8 = "^7.3.0"

